# Foton

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeLists.txt.in  LICENSE.txt  MANIFEST.in  README  README.md  install.py  mac.sh  setup.py
Foton/: CMakeLists.txt  Foton.cxx  Foton.hxx  Foton.i  __init__.py  main.cxx
Foton/Camera/: CMakeLists.txt  Camera.cxx  Camera.hxx
Foton/Collider/: Collider.cxx  Collider.hxx
Foton/Constraint/: CMakeLists.txt  Constraint.cxx  Constraint.hxx
Foton/Entity/: CMakeLists.txt  Entity.cxx  Entity.hxx  EntityStruct.hxx
Foton/Importers/: CMakeLists.txt  Importers.hxx  OBJ.cxx  PBRT.cxx
Foton/Libraries/GLFW/: GLFW.cxx  GLFW.hxx
Foton/Libraries/GLM/: GLM.i  __init__.py
Foton/Libraries/OpenVR/: OpenVR.cxx  OpenVR.hxx
Foton/Libraries/SpaceMouse/: SpaceMouse.cxx  SpaceMouse.hxx
Foton/Libraries/Vulkan/: Vulkan.cxx  Vulkan.hxx
Foton/Light/: Light.cxx  Light.hxx  LightStruct.hxx
Foton/Material/: CMakeLists.txt  Material.cxx  Material.hxx
Foton/Mesh/: Mesh.cxx  Mesh.hxx
Foton/Prefabs/: CameraPrefab.cxx  Prefabs.cxx  VRRig.cxx
Foton/Resources/: CMakeLists.txt
Foton/Resources/Defaults/: defaultVolume.raw  ltc1-lut.ktx  ltc2-lut.ktx  ltc_amp.ktx  ltc_mat.ktx  missing-texture.ktx  missing-volume.ktx  rankingTile_128_128_8.ktx  scrambleTile_128_128_8.ktx
Foton/Resources/Shaders/Common/: Attributes.hxx  Descriptors.hxx  DisneyBRDF.hxx  DisneyBSDF.hxx  GBufferLocations.hxx  Lights.hxx  (+7 more)
Foton/RigidBody/: RigidBody.cxx  RigidBody.hxx
Foton/Systems/EventSystem/: EventSystem.cxx  EventSystem.hxx
Foton/Systems/PhysicsSystem/: PhysicsSystem.cxx  PhysicsSystem.hxx
Foton/Systems/PythonSystem/: PythonSystem.cxx  PythonSystem.hxx
Foton/Systems/RenderSystem/: CMakeLists.txt  PipelineParameters.hxx  PushConstants.hxx  RenderSystem.cxx  RenderSystem.hxx
Foton/Tests/: test_compare_image.cxx  test_initialize_pluto.cxx
Foton/Texture/: CMakeLists.txt  Texture.cxx  Texture.hxx  TextureStruct.hxx
Foton/Tools/: CMakeLists.txt  FileReader.hxx  Options.cxx  Singleton.hxx  StaticFactory.hxx  System.hxx  Typemaps.i  whereami.cxx
Foton/Transform/: Transform.cxx  Transform.hxx
Pluto/: CMakeLists.txt  Pluto.cxx  Pluto.hxx  Pluto.i  __init__.py  main.cxx
Pluto/Camera/: Camera.cxx  Camera.hxx  CameraStruct.hxx
Pluto/Collider/: CMakeLists.txt  Collider.cxx  Collider.hxx
Pluto/Constraint/: Constraint.cxx  Constraint.hxx
Pluto/Entity/: Entity.cxx  Entity.hxx  EntityStruct.hxx
Pluto/Importers/: Importers.hxx  OBJ.cxx  PBRT.cxx
Pluto/Libraries/: CMakeLists.txt  Libraries.i  __init__.py
Pluto/Libraries/GLFW/: GLFW.cxx  GLFW.hxx
Pluto/Libraries/GLM/: GLM.i  __init__.py
Pluto/Libraries/OpenVR/: CMakeLists.txt  OpenVR.cxx  OpenVR.hxx
Pluto/Libraries/SpaceMouse/: CMakeLists.txt  SpaceMouse.cxx  SpaceMouse.hxx
Pluto/Libraries/Vulkan/: Vulkan.cxx  Vulkan.hxx  threadsafe_queue.hpp  threadsafe_queue.tpp
Pluto/Light/: CMakeLists.txt  Light.cxx  Light.hxx  LightStruct.hxx
Pluto/Material/: CMakeLists.txt  Material.cxx  Material.hxx  MaterialStruct.hxx  PipelineParameters.hxx  PushConstants.hxx
Pluto/Mesh/: CMakeLists.txt  Mesh.cxx  Mesh.hxx  MeshStruct.hxx
Pluto/Prefabs/: CMakeLists.txt  CameraPrefab.cxx  CameraPrefab.hxx  Prefabs.cxx  Prefabs.hxx  VRRig.cxx  VRRig.hxx
Pluto/Resources/: CMakeLists.txt
Pluto/Resources/Defaults/: brdf-lut.ktx  checker.ktx  default-diffuse-cubemap.ktx  ltc1-lut.ktx  ltc2-lut.ktx  ltc_amp.ktx  ltc_mat.ktx  missing-texcube.ktx  missing-texture.ktx  rankingTile_128_128_8.ktx  scrambleTile_128_128_8.ktx  sobelTile.ktx
Pluto/Resources/Shaders/: Attributes.hxx  DescriptorLayout.hxx  Descriptors.hxx  DisneyBRDF.hxx  DisneyBSDF.hxx  FragmentCommon.hxx  FragmentVaryings.hxx  LTCCommon.hxx  Lights.hxx  Options.hxx  Random.hxx  ShaderCommon.hxx  ShaderConstants.hxx  Utilities.hxx  VertexCommon.hxx  VertexVaryings.hxx
Pluto/RigidBody/: CMakeLists.txt  RigidBody.cxx  RigidBody.hxx
Pluto/Systems/: CMakeLists.txt  Systems.i  __init__.py
Pluto/Systems/EventSystem/: EventSystem.cxx  EventSystem.hxx
Pluto/Systems/PhysicsSystem/: CMakeLists.txt  ContactResultCallback.hxx  PhysicsSystem.cxx  PhysicsSystem.hxx
Pluto/Systems/PythonSystem/: PythonSystem.cxx  PythonSystem.hxx
Pluto/Systems/RenderSystem/: PipelineParameters.hxx  PushConstants.hxx  RenderSystem.cxx  RenderSystem.hxx
Pluto/Tests/: test_compare_image.cxx  test_initialize.cxx  test_initialize_pluto.cxx
Pluto/Texture/: CMakeLists.txt  Texture.cxx  Texture.hxx  TextureStruct.hxx
Pluto/Tools/: CMakeLists.txt  FileReader.hxx  Options.cxx  Options.hxx  StaticFactory.hxx  System.hxx  Typemaps.i  version.h
Pluto/Tools/Dictionaries/: CreateWindowInfo.i  Dictionaries.i
Pluto/Transform/: CMakeLists.txt  Transform.cxx  Transform.hxx  TransformStruct.hxx
VinylEngine/: CMakeLists.txt  Vinyl.hxx  Vinyl.i  __init__.py  config.json  main.cxx
VinylEngine/BaseClasses/: CMakeLists.txt  Singleton.hxx  System.hxx
VinylEngine/Components/: CMakeLists.txt  Components.i  __init__.py
VinylEngine/Components/Component/: CMakeLists.txt  Component.hxx
VinylEngine/Components/ComponentManager/: CMakeLists.txt  ComponentManager.cxx  ComponentManager.hxx
VinylEngine/Components/Transform/: CMakeLists.txt  Transform.hxx
VinylEngine/Entities/Entity/: Entity.hxx
VinylEngine/Libraries/: CMakeLists.txt  Libraries.i  __init__.py
VinylEngine/Libraries/GLFW/: CMakeLists.txt  GLFW.cxx  GLFW.hxx
VinylEngine/Libraries/Vulkan/: CMakeLists.txt  Vulkan.cxx  Vulkan.hxx
VinylEngine/Systems/: CMakeLists.txt  Systems.i  __init__.py
VinylEngine/Systems/Bullet/: Bullet.hxx  CMakeLists.txt
VinylEngine/Systems/EventSystem/: CMakeLists.txt  EventSystem.cxx  EventSystem.hxx
VinylEngine/Systems/GLFW/: CMakeLists.txt  GLFW.hxx
VinylEngine/Systems/PythonSystem/: CMakeLists.txt  PythonSystem.cxx  PythonSystem.hxx
VinylEngine/Systems/RenderSystem/: CMakeLists.txt  RenderSystem.cxx  RenderSystem.hxx
VinylEngine/Systems/Vulkan/: CMakeLists.txt  Vulkan.cxx  Vulkan.hxx
VinylEngine/Tools/: CMakeLists.txt
VinylEngine/Typemaps/: HelperFunctions.i  Typemaps.i
(+211 files in other folders)
